<?xml version="1.0" encoding="UTF-8"?>
<!-- Copyright (C) 2014-2016 The OmniROM Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:key="display"
        android:title="@string/display_title">
        <Preference
            android:key="device_kcal"
            android:persistent="false"
            android:icon="@drawable/ic_kcal"
            android:title="@string/device_kcal_title"
            android:summary="@string/kcal_enabled_summary">
            <intent
                android:action="android.intent.action.MAIN"
                android:targetClass="com.aicp.device.kcal.KCalSettingsActivity"
                android:targetPackage="com.aicp.device.kcal" />
        </Preference>
    </PreferenceCategory>

    <PreferenceCategory
        android:key="dirac"
        android:title="@string/category_audio">
        <Preference
            android:key="device_dirac"
            android:persistent="false"
            android:icon="@drawable/ic_mi"
            android:title="@string/dirac_title"
            android:summary="@string/dirac_summary">
            <intent
                android:action="android.intent.action.MAIN"
                android:targetClass="com.aicp.device.dirac.DiracActivity"
                android:targetPackage="com.aicp.device.dirac" />
        </Preference>
    </PreferenceCategory>

    <!--<PreferenceCategory
        android:key="category_audiogains"
        android:title="@string/category_audiogains">
        <com.aicp.device.HeadphoneGainPreference
            android:key="headphone_gain"
            android:title="@string/headphone_gain_title"
            android:icon="@drawable/ic_hp_gain"
            android:summary="@string/headphone_gain_summary"
            android:persistent="false" />
        <com.aicp.device.MicGainPreference
            android:key="mic_gain"
            android:title="@string/mic_gain_title"
            android:icon="@drawable/ic_mic_gain"
            android:summary="@string/mic_gain_summary"
            android:persistent="false" />
        <com.aicp.device.SpeakerGainPreference
            android:key="speaker_gain"
            android:title="@string/speaker_gain_title"
            android:icon="@drawable/ic_speaker_gain"
            android:summary="@string/speaker_gain_summary"
            android:persistent="false" />
    </PreferenceCategory>-->

    <PreferenceCategory
        android:key="usb_fastcharge"
        android:title="@string/usb_fastcharge_title" >
        <SwitchPreference
            android:key="fastcharge"
            android:summary="@string/fastcharge_summary"
            android:title="@string/fastcharge_title"
            android:icon="@drawable/ic_fastcharge"
            android:defaultValue="true"/>
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/category_vibrator">
        <com.aicp.device.VibratorStrengthPreference
            android:key="vib_strength"
            android:title="@string/vib_strength_title"
            android:icon="@drawable/ic_vibration"
            android:summary="@string/vib_strength_summary"
            android:persistent="false" />

        <com.aicp.device.VibratorCallStrengthPreference
            android:key="vib_call_strength"
            android:icon="@drawable/ic_call"
            android:title="@string/vib_call_strength_title_head"
            android:summary="@string/vib_call_strength_summary_head" />

        <com.aicp.device.VibratorNotifStrengthPreference
            android:key="vib_notif_strength"
            android:icon="@drawable/ic_notifications"
            android:title="@string/vib_notif_strength_title_head"
            android:summary="@string/vib_notif_strength_summary_head" />
    </PreferenceCategory>

</PreferenceScreen>
